# InvestigacionOperativa

./: pyproject.toml  shell.nix
InvestigacionOperativa/clasesPracticas/: clase1.ipynb  clase2-my.sol  clase2.ipynb  clase3-2.sol  clase3-my.sol  clase3-my2.sol  clase3.ipynb  clase3.sol  clase4-my.sol  clase4.ipynb
InvestigacionOperativa/practica/practica1/: Ej1.sol  Ej11.sol  Ej12.sol  Ej2.sol  Ej4.sol  Ej6.sol  Ej9.sol  ejercicio7.ipynb  practica1.ipynb
InvestigacionOperativa/practica/practica2/: practica2.ipynb
InvestigacionOperativa/practica/practica3/: practica3.ipynb
InvestigacionOperativa/programa/: programa.txt
clasesPracticas/: clase1.ipynb  solucion_clase1.sol
practica/practica1/: practica1.ipynb
