[project]
name = "investigacionoperativa"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Moran",email = "matiec52000@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyscipopt (>=5.6.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
