[tool.poetry]
name = "investigacionoperativa"
version = "0.1.0"
description = ""
authors = ["matmoran_meli <matiasnicolas.moran@mercadolibre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.3.2"
pandas = "^2.3.2"
matplotlib = "^3.10.5"
pyscipopt = "^5.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
