[project]
name = "investigacionOperativa"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Moran", email = "matiec52000@hotmail.com"}
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pyscipopt = "^5.6.0"
scipy = "^1.16.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
ipykernel = "^6.30.1"
jupyter = "^1.0.0"
jupyterlab = "^4.2.4"
jupyterlab-vim = "^4.1.3"
jupyterlab-code-formatter = "^3.0.2"
jupyterlab-lsp = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
